--- a/themes/cintiapub/layout/_partial/footer.ejs
+++ b/themes/cintiapub/layout/_partial/footer.ejs
@@ -32,14 +32,14 @@
           <div class="medium-12 columns">
             <label>
               <label for="email" class="contact">Contact Me</label>
-              <input type="email" name="_replyto" placeholder="Email Address" required />
+              <input type="email" name="email" placeholder="Email Address" required />
             </label>
           </div>
         </div>
         <div class="row">
           <div class="medium-12 columns">
             <label>
-              <textarea rows="5" id="message" placeholder="Message" required></textarea>
+              <textarea rows="5" name="message" placeholder="Message" required></textarea>
             </label>
           </div>
           <div class="row">
