--- a/themes/cintiapub/source/css/_customizations.scss
+++ b/themes/cintiapub/source/css/_customizations.scss
@@ -101,7 +101,7 @@ footer#footer {
 			font-size: 0.875rem;
 			font-weight: normal;
 			color: $oil;
-			padding: 1.3rem;
+			padding: 8px 16px;
 
 			&::-webkit-input-placeholder {
 			   color: $graffity;
