new resume + home grid

--- a/themes/cintiapub/layout/_partial/index.ejs
+++ b/themes/cintiapub/layout/_partial/index.ejs
@@ -4,88 +4,88 @@
     <ul class="image-grid small-block-grid-2 medium-block-grid-3 large-block-grid-4 text-center">
 
       <li>
-        <div class="image-wrapper overlay-fade-in">
-          <a class="image-link" href="/categories/poster" title="Posters">
+        <div class="category-image home-posters">
+          <a href="/categories/poster" title="Posters">
             <img src="https://farm1.staticflickr.com/572/21778707603_59021da5ea_h.jpg" itemprop="image">
           </a>
-          <div class="image-overlay-content">
+          <div class="image-filter-background">
             <h2>Posters</h2>
           </div>
         </div>
       </li>
 
       <li>
-        <div class="image-wrapper overlay-fade-in">
-          <a class="image-link" href="/categories/brochure" title="Brochures">
+        <div class="category-image home-brochures">
+          <a href="/categories/brochure" title="Brochures">
             <img src="https://farm6.staticflickr.com/5745/21439467621_b0b995312a_h.jpg" itemprop="image">
           </a>
-          <div class="image-overlay-content">
+          <div class="image-filter-background">
             <h2>Brochures</h2>
           </div>
         </div>
       </li>
 
       <li>
-        <div class="image-wrapper overlay-fade-in">
-          <a class="image-link" href="/categories/logo" title="Logos">
+        <div class="category-image home-logos">
+          <a href="/categories/logo" title="Logos">
             <img src="https://farm1.staticflickr.com/695/22373809746_3947c530a6_h.jpg" itemprop="image">
           </a>
-          <div class="image-overlay-content">
+          <div class="image-filter-background">
             <h2>Logos</h2>
           </div>
         </div>
       </li>
 
       <li>
-        <div class="image-wrapper overlay-fade-in">
-          <a class="image-link" href="/categories/digital-banner" title="Digital banners">
+        <div class="category-image home-digital-banners">
+          <a href="/categories/digital-banner" title="Digital banners">
             <img src="https://farm1.staticflickr.com/716/22212084128_a64a87f847_h.jpg" itemprop="image">
           </a>
-          <div class="image-overlay-content">
+          <div class="image-filter-background">
             <h2>Digital banners</h2>
           </div>
         </div>
       </li>
 
       <li>
-        <div class="image-wrapper overlay-fade-in">
-          <a class="image-link" href="/categories/social-media" title="Social media">
+        <div class="category-image home-social-media">
+          <a href="/categories/social-media" title="Social media">
             <img src="https://farm6.staticflickr.com/5809/21456729876_df5374b2c1_h.jpg" itemprop="image">
           </a>
-          <div class="image-overlay-content">
+          <div class="image-filter-background">
             <h2>Social media</h2>
           </div>
         </div>
       </li>
 
       <li>
-        <div class="image-wrapper overlay-fade-in">
-          <a class="image-link" href="/categories/e-learning" title="E-learning">
+        <div class="category-image home-e-learning">
+          <a href="/categories/e-learning" title="E-learning">
             <img src="https://farm1.staticflickr.com/698/21296049269_da873efdf3_h.jpg" itemprop="image">
           </a>
-          <div class="image-overlay-content">
+          <div class="image-filter-background">
             <h2>E-learning</h2>
           </div>
         </div>
       </li>
 
       <li>
-        <div class="image-wrapper overlay-fade-in">
-          <a class="image-link" href="/categories/illustration" title="Illustrations">
+        <div class="category-image home-illustrations">
+          <a href="/categories/illustration" title="Illustrations">
             <img src="https://farm1.staticflickr.com/617/21315043768_e85b7ee555_h.jpg" itemprop="image">
           </a>
-          <div class="image-overlay-content">
+          <div class="image-filter-background">
             <h2>Illustrations</h2>
           </div>
         </div>
       </li>
 
       <li>
-        <div class="image-wrapper overlay-fade-in">
-          <a class="image-link" href="/categories/miscellany" title="Miscellany">
+        <div class="category-image home-miscellany">
+          <a href="/categories/miscellany" title="Miscellany">
             <img src="https://farm6.staticflickr.com/5728/21243202188_96a4e1a1bb_h.jpg" itemprop="image">
           </a>
-          <div class="image-overlay-content">
+          <div class="image-filter-background">
             <h2>Miscellany</h2>
           </div>
         </div>
