--- a/themes/cintiapub/source/css/_image-hover.scss
+++ b/themes/cintiapub/source/css/_image-hover.scss
@@ -105,4 +105,74 @@ $global-radius: 4px;
       transition-delay: 0.2s;
     }
   }
+
+}
+
+.category-image {
+  position: relative;
+
+  a {
+    line-height: 200px;
+    display: inline-block;
+    overflow: hidden;
+    border: 1px solid #cccccc;
+    height: 200px;
+    position: relative;
+  }
+
+  .image-filter-background {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+    transition: all 0.4s ease-in-out;
+
+    h2 {
+      color: #f2f2f2;
+      font-size: 1.5rem;
+      transition: all 0.2s ease-in-out;
+      background: rgba(0,0,0,0.5);
+      position: relative;
+      top: 50%;
+      -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+      transform: translateY(-50%);
+      text-transform: lowercase;
+      padding: 5px;
+    }
+
+  }
+
+}
+
+@media (min-width: 840px) {
+  .category-image {
+
+    img {
+      transition: all 0.2s linear;
+    }
+
+    &:hover {
+      img {
+        transform: scale(1.2);
+      }
+    }
+
+  }
+}
+
+@mixin category-image-filter($color) {
+  .image-filter-background {
+    background-color: rgba($color, 0.4);
+  }
+  @media (min-width: 840px) {
+    &:hover {
+      .image-filter-background {
+        background-color: rgba(darken($color, 50%), 0.4);
+      }
+    }
+  }
 }
