--- a/themes/cintiapub/layout/_partial/header.ejs
+++ b/themes/cintiapub/layout/_partial/header.ejs
@@ -19,7 +19,7 @@
       <!-- Right Nav Section -->
       <ul class="right">
         <li><a href="/about">About</a></li>
-        <li><a href="/pdf/resume-cintia-romero.pdf">Resume</a></li>
+        <li><a href="/pdf/resume-cintia-romero.pdf" target="_blank">Resume</a></li>
       </ul>
     </section>
   </nav>
