--- a/themes/cintiapub/source/css/_customizations.scss
+++ b/themes/cintiapub/source/css/_customizations.scss
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Merriweather:400,700|Poiret+One);
+@import url(https://fonts.googleapis.com/css?family=Poiret+One);
 @import 'foundation/functions';
 
 $blue-link   : #008CBA;
@@ -174,7 +174,6 @@ footer#footer {
 }
 
 section#main {
-	font-family: 'Merriweather', serif;
 	padding-top: 2rem;
 	padding-bottom: 1rem;
 
