--- a/themes/cintiapub/source/css/_image-hover.scss
+++ b/themes/cintiapub/source/css/_image-hover.scss
@@ -118,6 +118,10 @@ $global-radius: 4px;
     border: 1px solid #cccccc;
     height: 200px;
     position: relative;
+
+    img {
+      width: 100%;
+    }
   }
 
   .image-filter-background {
