email received page

--- a/themes/cintiapub/layout/_partial/footer.ejs
+++ b/themes/cintiapub/layout/_partial/footer.ejs
@@ -41,6 +41,7 @@
             <div class="medium-12 columns">
               <input type="text" name="_gotcha" style="display:none" />
               <input type="hidden" name="_subject" value="Message received from cintiaromero.com" />
+              <input type="hidden" name="_next" value="//cintiaromero.com/about/email-received.html" />
               <button class="submit" type="submit" value="Submit">Send</button>
             </div>
           </div>
