--- a/themes/cintiapub/layout/_partial/footer.ejs
+++ b/themes/cintiapub/layout/_partial/footer.ejs
@@ -3,13 +3,13 @@
     <div class="small-12 medium-7 columns">
       <h3 class="logo-footer">Cintia Romero</h3>
       <ul class="footer-links">
-        <li><a href="/categories/poster">Posters</a></li>
-        <li><a href="/categories/brochure">Brochures</a></li>
-        <li><a href="/categories/logo">Logos</a></li>
-        <li><a href="/categories/digital-banner">Digital banners</a></li>
+        <li><a href="/categories/posters">Posters</a></li>
+        <li><a href="/categories/brochures">Brochures</a></li>
+        <li><a href="/categories/logos">Logos</a></li>
+        <li><a href="/categories/digital-banners">Digital banners</a></li>
         <li><a href="/categories/social-media">Social media</a></li>
         <li><a href="/categories/e-learning">E-learning</a></li>
-        <li><a href="/categories/illustration">Illustrations</a></li>
+        <li><a href="/categories/illustrations">Illustrations</a></li>
         <li><a href="/categories/miscellany">Miscellany</a></li>
       </ul>
       <ul class="inline-list social">
