--- a/themes/cintiapub/layout/_partial/index.ejs
+++ b/themes/cintiapub/layout/_partial/index.ejs
@@ -5,7 +5,7 @@
 
       <li>
         <div class="category-image home-posters">
-          <a href="/categories/poster" title="Posters">
+          <a href="/categories/posters" title="Posters">
             <img src="https://farm1.staticflickr.com/572/21778707603_59021da5ea_h.jpg" itemprop="image">
           </a>
           <div class="image-filter-background">
@@ -16,7 +16,7 @@
 
       <li>
         <div class="category-image home-brochures">
-          <a href="/categories/brochure" title="Brochures">
+          <a href="/categories/brochures" title="Brochures">
             <img src="https://farm6.staticflickr.com/5745/21439467621_b0b995312a_h.jpg" itemprop="image">
           </a>
           <div class="image-filter-background">
@@ -27,7 +27,7 @@
 
       <li>
         <div class="category-image home-logos">
-          <a href="/categories/logo" title="Logos">
+          <a href="/categories/logos" title="Logos">
             <img src="https://farm1.staticflickr.com/695/22373809746_3947c530a6_h.jpg" itemprop="image">
           </a>
           <div class="image-filter-background">
@@ -38,7 +38,7 @@
 
       <li>
         <div class="category-image home-digital-banners">
-          <a href="/categories/digital-banner" title="Digital banners">
+          <a href="/categories/digital-banners" title="Digital banners">
             <img src="https://farm1.staticflickr.com/716/22212084128_a64a87f847_h.jpg" itemprop="image">
           </a>
           <div class="image-filter-background">
@@ -71,7 +71,7 @@
 
       <li>
         <div class="category-image home-illustrations">
-          <a href="/categories/illustration" title="Illustrations">
+          <a href="/categories/illustrations" title="Illustrations">
             <img src="https://farm1.staticflickr.com/617/21315043768_e85b7ee555_h.jpg" itemprop="image">
           </a>
           <div class="image-filter-background">
