updating with epifania work + webdesign

--- a/themes/cintiapub/layout/_partial/category.ejs
+++ b/themes/cintiapub/layout/_partial/category.ejs
@@ -46,29 +46,29 @@
 
           <% } else if (page.category === 'logos') { %>
           <li>
-            <div class="category-image home-digital-banners">
-              <a href="/categories/digital-banners" title="Digital banners">
-                <img src="https://farm1.staticflickr.com/716/22212084128_a64a87f847_h.jpg" itemprop="image">
-              </a>
-              <div class="image-filter-background">
-                <h2>Digital banners</h2>
-              </div>
-            </div>
-          </li>
-
-          <% } else if (page.category === 'digital banners') { %>
-          <li>
-            <div class="category-image home-social-media">
-              <a href="/categories/social-media" title="Social media">
+            <div class="category-image home-ads">
+              <a href="/categories/ads" title="Ads & banners">
                 <img src="https://farm6.staticflickr.com/5809/21456729876_df5374b2c1_h.jpg" itemprop="image">
               </a>
               <div class="image-filter-background">
-                <h2>Social media</h2>
+                <h2>Ads & banners</h2>
               </div>
             </div>
           </li>
 
-          <% } else if (page.category === 'social media') { %>
+          <% } else if (page.category === 'ads') { %>
+          <li>
+            <div class="category-image home-web-design">
+              <a href="/categories/web-design" title="Web Design">
+                <img src="https://farm2.staticflickr.com/1502/25745903036_545b9e705b_h.jpg" itemprop="image">
+              </a>
+              <div class="image-filter-background">
+                <h2>Web design</h2>
+              </div>
+            </div>
+          </li>
+
+          <% } else if (page.category === 'web design') { %>
           <li>
             <div class="category-image home-e-learning">
               <a href="/categories/e-learning" title="E-learning">
