--- a/themes/cintiapub/source/css/_customizations.scss
+++ b/themes/cintiapub/source/css/_customizations.scss
@@ -239,11 +239,11 @@ section#main {
 		@include category-image-filter(#99CCFF);
 	}
 
-	.home-digital-banners {
+	.home-ads {
 		@include category-image-filter(#9999FF);
 	}
 
-	.home-social-media {
+	.home-web-design {
 		@include category-image-filter(#FFFF99);
 	}
 
