fixing footer links

--- a/themes/cintiapub/layout/_partial/footer.ejs
+++ b/themes/cintiapub/layout/_partial/footer.ejs
@@ -6,8 +6,8 @@
         <li><a href="/categories/posters">Posters</a></li>
         <li><a href="/categories/brochures">Brochures</a></li>
         <li><a href="/categories/logos">Logos</a></li>
-        <li><a href="/categories/digital-banners">Digital banners</a></li>
-        <li><a href="/categories/social-media">Social media</a></li>
+        <li><a href="/categories/web-design">Web design</a></li>
+        <li><a href="/categories/ads">Ads & banners</a></li>
         <li><a href="/categories/e-learning">E-learning</a></li>
         <li><a href="/categories/illustrations">Illustrations</a></li>
         <li><a href="/categories/miscellany">Miscellany</a></li>
