--- a/themes/cintiapub/layout/_partial/index.ejs
+++ b/themes/cintiapub/layout/_partial/index.ejs
@@ -49,7 +49,7 @@
 
       <li>
         <div class="category-image home-web-design">
-          <a href="/categories/web-design" title="Web Design">
+          <a href="/categories/web-design" title="Web design">
             <img src="https://farm2.staticflickr.com/1502/25745903036_545b9e705b_h.jpg" itemprop="image">
           </a>
           <div class="image-filter-background">
