moving category and other updates

--- a/themes/cintiapub/layout/_partial/footer.ejs
+++ b/themes/cintiapub/layout/_partial/footer.ejs
@@ -22,7 +22,7 @@
       Powered by <a href="http://hexo.io/" target="_blank">Hexo</a>.</p>
     </div>
     <div class="small-12 medium-5 columns">
-      <form class="footer-form" action="http://formspree.io/cintiapub+contact@gmail.com" method="POST">
+      <form class="footer-form" action="https://formspree.io/cintiapub+contact@gmail.com" method="POST">
         <div class="row">
           <div class="medium-12 columns">
             <label>
@@ -41,7 +41,7 @@
             <div class="medium-12 columns">
               <input type="text" name="_gotcha" style="display:none" />
               <input type="hidden" name="_subject" value="Message received from cintiaromero.com" />
-              <input type="hidden" name="_next" value="//cintiaromero.com/about/email-received.html" />
+              <input type="hidden" name="_next" value="http://cintiaromero.com/about/email-received.html" />
               <button class="submit" type="submit" value="Submit">Send</button>
             </div>
           </div>
