adding foundation tabs

--- a/themes/cintiapub/layout/_partial/after-footer.ejs
+++ b/themes/cintiapub/layout/_partial/after-footer.ejs
@@ -3,5 +3,7 @@
 <%- js('https://cdnjs.cloudflare.com/ajax/libs/webshim/1.15.10/minified/polyfiller.js') %>
 <%- js('js/vendor/photoswipe.min') %>
 <%- js('js/vendor/photoswipe-ui-default.min') %>
+<%- js('js/vendor/foundation.min') %>
+<%- js('js/vendor/foundation.tab.min') %>
 <%- js('js/script') %>
 <%- partial('google-analytics') %>
