--- a/themes/cintiapub/layout/_partial/index.ejs
+++ b/themes/cintiapub/layout/_partial/index.ejs
@@ -1,96 +1,118 @@
 <div class="row">
   <div class="large-12 columns">
 
-    <ul class="image-grid small-block-grid-2 medium-block-grid-3 large-block-grid-4 text-center">
-
-      <li>
-        <div class="category-image home-posters">
-          <a href="/categories/posters" title="Posters">
-            <img src="https://farm1.staticflickr.com/572/21778707603_59021da5ea_h.jpg" itemprop="image">
-          </a>
-          <div class="image-filter-background">
-            <h2>Posters</h2>
-          </div>
-        </div>
-      </li>
-
-      <li>
-        <div class="category-image home-brochures">
-          <a href="/categories/brochures" title="Brochures">
-            <img src="https://farm6.staticflickr.com/5745/21439467621_b0b995312a_h.jpg" itemprop="image">
-          </a>
-          <div class="image-filter-background">
-            <h2>Brochures</h2>
-          </div>
-        </div>
-      </li>
-
-      <li>
-        <div class="category-image home-logos">
-          <a href="/categories/logos" title="Logos">
-            <img src="https://farm1.staticflickr.com/695/22373809746_3947c530a6_h.jpg" itemprop="image">
-          </a>
-          <div class="image-filter-background">
-            <h2>Logos</h2>
-          </div>
-        </div>
-      </li>
-
-      <li>
-        <div class="category-image home-ads">
-          <a href="/categories/ads" title="Ads & banners">
-            <img src="https://farm6.staticflickr.com/5809/21456729876_df5374b2c1_h.jpg" itemprop="image">
-          </a>
-          <div class="image-filter-background">
-            <h2>Ads & banners</h2>
-          </div>
-        </div>
-      </li>
-
-      <li>
-        <div class="category-image home-web-design">
-          <a href="/categories/web-design" title="Web design">
-            <img src="https://farm2.staticflickr.com/1502/25745903036_545b9e705b_h.jpg" itemprop="image">
-          </a>
-          <div class="image-filter-background">
-            <h2>Web design</h2>
-          </div>
-        </div>
-      </li>
-
-      <li>
-        <div class="category-image home-e-learning">
-          <a href="/categories/e-learning" title="E-learning">
-            <img src="https://farm1.staticflickr.com/698/21296049269_da873efdf3_h.jpg" itemprop="image">
-          </a>
-          <div class="image-filter-background">
-            <h2>E-learning</h2>
-          </div>
-        </div>
-      </li>
-
-      <li>
-        <div class="category-image home-illustrations">
-          <a href="/categories/illustrations" title="Illustrations">
-            <img src="https://farm1.staticflickr.com/617/21315043768_e85b7ee555_h.jpg" itemprop="image">
-          </a>
-          <div class="image-filter-background">
-            <h2>Illustrations</h2>
-          </div>
-        </div>
-      </li>
-
-      <li>
-        <div class="category-image home-miscellany">
-          <a href="/categories/miscellany" title="Miscellany">
-            <img src="https://farm6.staticflickr.com/5728/21243202188_96a4e1a1bb_h.jpg" itemprop="image">
-          </a>
-          <div class="image-filter-background">
-            <h2>Miscellany</h2>
-          </div>
-        </div>
-      </li>
+    <ul class="tabs" data-tab id="main-tabs">
+      <li class="tab-title active"><a href="#by-type">By type</a></li>
+      <li class="tab-title"><a href="#by-client">By client</a></li>
+      <li class="tab-title"><a href="#by-software">By software</a></li>
     </ul>
+
+    <div class="tabs-content" id="main-tabs-content">
+
+      <!-- By type -->
+      <div class="content active" id="by-type">
+        <ul class="image-grid small-block-grid-2 medium-block-grid-3 large-block-grid-4 text-center">
+          <li>
+            <div class="category-image home-posters">
+              <a href="/categories/posters" title="Posters">
+                <img src="https://farm1.staticflickr.com/572/21778707603_59021da5ea_h.jpg" itemprop="image">
+              </a>
+              <div class="image-filter-background">
+                <h2>Posters</h2>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="category-image home-brochures">
+              <a href="/categories/brochures" title="Brochures">
+                <img src="https://farm6.staticflickr.com/5745/21439467621_b0b995312a_h.jpg" itemprop="image">
+              </a>
+              <div class="image-filter-background">
+                <h2>Brochures</h2>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="category-image home-logos">
+              <a href="/categories/logos" title="Logos">
+                <img src="https://farm1.staticflickr.com/695/22373809746_3947c530a6_h.jpg" itemprop="image">
+              </a>
+              <div class="image-filter-background">
+                <h2>Logos</h2>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="category-image home-ads">
+              <a href="/categories/ads" title="Ads & banners">
+                <img src="https://farm6.staticflickr.com/5809/21456729876_df5374b2c1_h.jpg" itemprop="image">
+              </a>
+              <div class="image-filter-background">
+                <h2>Ads & banners</h2>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="category-image home-web-design">
+              <a href="/categories/web-design" title="Web design">
+                <img src="https://farm2.staticflickr.com/1502/25745903036_545b9e705b_h.jpg" itemprop="image">
+              </a>
+              <div class="image-filter-background">
+                <h2>Web design</h2>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="category-image home-e-learning">
+              <a href="/categories/e-learning" title="E-learning">
+                <img src="https://farm1.staticflickr.com/698/21296049269_da873efdf3_h.jpg" itemprop="image">
+              </a>
+              <div class="image-filter-background">
+                <h2>E-learning</h2>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="category-image home-illustrations">
+              <a href="/categories/illustrations" title="Illustrations">
+                <img src="https://farm1.staticflickr.com/617/21315043768_e85b7ee555_h.jpg" itemprop="image">
+              </a>
+              <div class="image-filter-background">
+                <h2>Illustrations</h2>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="category-image home-miscellany">
+              <a href="/categories/miscellany" title="Miscellany">
+                <img src="https://farm6.staticflickr.com/5728/21243202188_96a4e1a1bb_h.jpg" itemprop="image">
+              </a>
+              <div class="image-filter-background">
+                <h2>Miscellany</h2>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+
+      <!-- By client -->
+      <div class="content" id="by-client">
+        by client
+      </div>
+
+      <!-- By software -->
+      <div class="content" id="by-software">
+        by software
+      </div>
+    </div>
+
   </div>
 
 </div>
