--- a/themes/cintiapub/layout/_partial/index.ejs
+++ b/themes/cintiapub/layout/_partial/index.ejs
@@ -4,7 +4,6 @@
     <ul class="tabs" data-tab id="main-tabs">
       <li class="tab-title active"><a href="#by-type">By type</a></li>
       <li class="tab-title"><a href="#by-client">By client</a></li>
-      <li class="tab-title"><a href="#by-software">By software</a></li>
     </ul>
 
     <div class="tabs-content" id="main-tabs-content">
@@ -59,7 +58,7 @@
           <li>
             <div class="category-image home-web-design">
               <a href="/categories/web-design" title="Web design">
-                <img src="https://farm2.staticflickr.com/1502/25745903036_545b9e705b_h.jpg" itemprop="image">
+                <img src="https://farm2.staticflickr.com/1713/25316011803_e57e0343d6_h.jpg" itemprop="image">
               </a>
               <div class="image-filter-background">
                 <h2>Web design</h2>
@@ -104,13 +103,97 @@
 
       <!-- By client -->
       <div class="content" id="by-client">
-        by client
+        <ul class="image-grid small-block-grid-2 medium-block-grid-3 large-block-grid-4 text-center">
+          <li>
+            <div class="category-image home-posters">
+              <a href="/clients/avenue-code" title="Avenue Code">
+                <img src="https://farm6.staticflickr.com/5745/21439467621_b0b995312a_h.jpg" itemprop="image">
+              </a>
+              <div class="image-filter-background">
+                <h2>Avenue Code</h2>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="category-image home-brochures">
+              <a href="/clients/ccsf" title="CSF">
+                <img src="https://farm6.staticflickr.com/5638/21439468121_64b8b25b20_h.jpg" itemprop="image">
+              </a>
+              <div class="image-filter-background">
+                <h2>CCSF</h2>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="category-image home-logos">
+              <a href="/clients/epifania" title="Epifania">
+                <img src="https://farm2.staticflickr.com/1653/25823961292_9ff9cecc31_h.jpg" itemprop="image">
+              </a>
+              <div class="image-filter-background">
+                <h2>Epifania</h2>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="category-image home-ads">
+              <a href="/clients/fundacao-unimed" title="Fundação Unimed">
+                <img src="https://farm1.staticflickr.com/592/21420096642_9c67629089_h.jpg" itemprop="image">
+              </a>
+              <div class="image-filter-background">
+                <h2>Fundação Unimed</h2>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="category-image home-web-design">
+              <a href="/clients/personal" title="Personal">
+                <img src="https://farm9.staticflickr.com/8580/28734250842_290e8306b0_h.jpg" itemprop="image">
+              </a>
+              <div class="image-filter-background">
+                <h2>Personal</h2>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="category-image home-e-learning">
+              <a href="/clients/regina-salomao" title="Regina Salomão">
+                <img src="https://farm6.staticflickr.com/5809/21456729876_df5374b2c1_h.jpg" itemprop="image">
+              </a>
+              <div class="image-filter-background">
+                <h2>Regina Salomão</h2>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="category-image home-illustrations">
+              <a href="/clients/taticas" title="Táticas">
+                <img src="https://farm1.staticflickr.com/685/20860240614_aa85cdd54e_h.jpg" itemprop="image">
+              </a>
+              <div class="image-filter-background">
+                <h2>Táticas</h2>
+              </div>
+            </div>
+          </li>
+
+          <li>
+            <div class="category-image home-miscellany">
+              <a href="/clients/uc-berkeley" title="UC Berkeley">
+                <img src="https://farm6.staticflickr.com/5767/23153218833_7b44b9199a_h.jpg" itemprop="image">
+              </a>
+              <div class="image-filter-background">
+                <h2>UC Berkeley</h2>
+              </div>
+            </div>
+          </li>
+        </ul>
       </div>
 
-      <!-- By software -->
-      <div class="content" id="by-software">
-        by software
-      </div>
     </div>
 
   </div>
