--- a/themes/cintiapub/layout/_partial/tag.ejs
+++ b/themes/cintiapub/layout/_partial/tag.ejs
@@ -11,7 +11,7 @@
           <% if (page.tag === 'Avenue Code') { %>
           <li>
             <div class="category-image home-group-2">
-              <a href="/tags/city-college-of-san-francisco" title="CSF">
+              <a href="/tags/City-College-of-San-Francisco" title="CSF">
                 <img src="https://farm6.staticflickr.com/5638/21439468121_64b8b25b20_h.jpg" itemprop="image">
               </a>
               <div class="image-filter-background">
@@ -23,7 +23,7 @@
           <% } else if (page.tag === 'City College of San Francisco') { %>
           <li>
             <div class="category-image home-group-3">
-              <a href="/tags/epifania" title="Epifania">
+              <a href="/tags/Epifania" title="Epifania">
                 <img src="https://farm2.staticflickr.com/1653/25823961292_9ff9cecc31_h.jpg" itemprop="image">
               </a>
               <div class="image-filter-background">
@@ -35,7 +35,7 @@
           <% } else if (page.tag === 'Epifania') { %>
           <li>
             <div class="category-image home-group-4">
-              <a href="/tags/fundacao-unimed" title="Fundação Unimed">
+              <a href="/tags/Fundacao-Unimed" title="Fundação Unimed">
                 <img src="https://farm1.staticflickr.com/592/21420096642_9c67629089_h.jpg" itemprop="image">
               </a>
               <div class="image-filter-background">
@@ -47,7 +47,7 @@
           <% } else if (page.tag === 'Fundação Unimed') { %>
           <li>
             <div class="category-image home-group-5">
-              <a href="/tags/personal" title="Personal">
+              <a href="/tags/Personal" title="Personal">
                 <img src="https://farm9.staticflickr.com/8580/28734250842_290e8306b0_h.jpg" itemprop="image">
               </a>
               <div class="image-filter-background">
@@ -59,7 +59,7 @@
           <% } else if (page.tag === 'Personal') { %>
           <li>
             <div class="category-image home-group-6">
-              <a href="/tags/regina-salomao" title="Regina Salomão">
+              <a href="/tags/Regina-Salomao" title="Regina Salomão">
                 <img src="https://farm6.staticflickr.com/5809/21456729876_df5374b2c1_h.jpg" itemprop="image">
               </a>
               <div class="image-filter-background">
@@ -71,7 +71,7 @@
           <% } else if (page.tag === 'Regina Salomão') { %>
           <li>
             <div class="category-image home-group-7">
-              <a href="/tags/taticas" title="Táticas">
+              <a href="/tags/Taticas" title="Táticas">
                 <img src="https://farm1.staticflickr.com/685/20860240614_aa85cdd54e_h.jpg" itemprop="image">
               </a>
               <div class="image-filter-background">
@@ -83,7 +83,7 @@
           <% } else if (page.tag === 'Táticas') { %>
           <li>
             <div class="category-image home-group-8">
-              <a href="/tags/uc-berkeley" title="UC Berkeley">
+              <a href="/tags/UC-Berkeley" title="UC Berkeley">
                 <img src="https://farm6.staticflickr.com/5767/23153218833_7b44b9199a_h.jpg" itemprop="image">
               </a>
               <div class="image-filter-background">
@@ -95,7 +95,7 @@
           <% } else if (page.tag === 'UC Berkeley') { %>
           <li>
             <div class="category-image home-group-1">
-              <a href="/tags/avenue-code" title="Avenue Code">
+              <a href="/tags/Avenue-Code" title="Avenue Code">
                 <img src="https://farm6.staticflickr.com/5745/21439467621_b0b995312a_h.jpg" itemprop="image">
               </a>
               <div class="image-filter-background">
