--- a/themes/cintiapub/source/css/foundation/_settings.scss
+++ b/themes/cintiapub/source/css/foundation/_settings.scss
@@ -1339,8 +1339,8 @@ $body-font-family: $font-family-sans-serif;
 $include-html-tabs-classes: $include-html-classes;
 
 $tabs-navigation-padding: rem-calc(16);
-$tabs-navigation-bg-color: $silver;
-$tabs-navigation-active-bg-color: $white;
+$tabs-navigation-bg-color: transparent;
+$tabs-navigation-active-bg-color: $silver;
 $tabs-navigation-hover-bg-color: scale-color($tabs-navigation-bg-color, $lightness: -6%);
 $tabs-navigation-font-color: $jet;
 $tabs-navigation-active-font-color: $tabs-navigation-font-color;
